# shiki-recs

./: .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
commands/: __init__.py  get_user_rates.py  get_users.py
db/: engine.py  models.py
db/migrations/: env.py  script.py.mako
db/migrations/versions/: 0001_initial.py
utils/: client.py  log.py  models.py  parser.py  settings.py
