[tool.poetry]
name = "shiki-recs"
version = "0.1.0"
description = ""
authors = ["Annovid <nil.nil532@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
alembic = "^1.13.1"
sqlalchemy = "^2.0.29"
ruff = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79